--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ import org.ajoberstar.grgit.Grgit
 
 buildscript {
   repositories {
+    maven {
+      url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
     mavenCentral()
     jcenter()
   }
@@ -890,6 +893,7 @@ project(':streams:examples') {
     compile project(':streams')
     compile project(':connect:json')  // this dependency should be removed after we unify data API
     compile libs.slf4jlog4j           // this dependency should be removed after KIP-4
+    testCompile libs.junit
   }
 
   javadoc {
